--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,9 @@ services:
       - '3307:3307'
     command: --default-authentication-plugin=mysql_native_password
     env_file: .env
-  
+    environment:
+      WEBPACKER_DEV_SERVER_HOST: webpacker
+
   webpacker:
     build: .
     command: ./bin/webpack-dev-server
