--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ jobs:
           DB_HOST: 127.0.0.1
           RAILS_ENV: test
           BUNDLER_VERSION: 2.1.4
-      - image: circleci/mysql:8.0
+      - image: circleci/mysql:8.0.20
         command: --default-authentication-plugin=mysql_native_password
         environment:
           MYSQL_ALLOW_EMPTY_PASSWORD: 'true'
@@ -34,7 +34,8 @@ jobs:
       - run:
           name: Wait for DB
           command: dockerize -wait tcp://localhost:3306 -timeout 1m
-      - run: bundle exec rake db:create
+      - run: bundle exec rake db:create RAILS_ENV=test
+      - run: bundle exec rake db:migrate RAILS_ENV=test
       - run:
           name: Rubocop
           command: bundle exec rubocop
@@ -44,15 +45,10 @@ jobs:
             mkdir /tmp/test-results
             TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | \
             circleci tests split --split-by=timings)"
-
-            sudo gem install bundler
-            sudo gem install rspec
-            sudo gem install rspec-core
             bundle exec rspec \
               --format progress \
               --out /tmp/test-results/rspec.xml \
               --format progress \
-              $TEST_FILES
               
       - store_test_results:
           path: /tmp/test-results
