--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ jobs:
       - run:
           name: Wait for DB
           command: dockerize -wait tcp://localhost:3306 -timeout 1m
-      - run: bundle exec rake db:create RAILS_ENV=test
+      - run: bundle exec rake db:create
       - run: bundle exec rake db:migrate RAILS_ENV=test
       - run:
           name: Rubocop
